[package]
name = "dibtd-ephr"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29", features = ["rand", "global-context", "serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "dibtd_benchmark"
harness = false