[package]
name = "dibtd-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
dibtd-ephr = { path = ".." }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "comprehensive_benchmark"
path = "src/comprehensive_benchmark.rs"

[[bench]]
name = "dibtd_criterion"
harness = false
path = "benches/dibtd_criterion.rs"